--- a/pom.xml
+++ b/pom.xml
@@ -81,12 +81,12 @@
         <repository>
           <id>nexus</id>
           <name>KC Tech Releases Nexus Repository</name>
-          <url>http://52.91.88.226:8081/repository/kctech-release/</url>
+          <url>http://3.110.179.55:8081/repository/naresh1/</url>
         </repository>
         <snapshotRepository>
           <id>nexus</id>
           <name>KC Tech Snapshot Nexus Repository </name>
-           <url>http://52.91.88.226:8081/repository/kctech-snapshot/</url>
+           <url>http://3.110.179.55:8081/repository/naresh/</url>
         </snapshotRepository>
    </distributionManagement>
 	
